# esp32-7in1-sensor

./: CMakeLists.txt
components/easyio_lib/: CMakeLists.txt
components/easyio_lib/include/: easyio.h  wifi_smartconfig.h
components/easyio_lib/src/: sntp_systime.c  wifi_smartconfig.c
main/: main.c
